recursion.lessons.recursion.spiral.Spiral.scala.error
Spiral:5: error: type mismatch;
 found   : Double(0.01)
 required: Int
		 	for(k<-0 to 5 by 0.01){
                                         ^